--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/kv": "^3.0.0",
     "googleapis": "^144.0.0",
     "next": "^14.2.29",
     "next-auth": "beta",
